k3s/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.d-kline.org`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: d-kline-org-tls
